@@ -1,0 +1,8 @@
+<header>Link for reseller's logo</header>
+
+When a custom logo is set for this reseller, this field determines the URL
+that is opened (in a new window) when the logo is clicked on. You should 
+enter a full URL, like <tt>http://www.resellerswebsite.com/</tt>. <p>
+
+<footer>
+
