@@ -1,0 +1,13 @@
+<header>Reseller's company logo</header>
+
+Virtualmin has the ability to display a logo in the top-left corner of the
+framed theme that is customized by the master administrator, perhaps for his
+hosting company or ISP. This field allows you to override that logo for
+customers of this reseller, who may have his own company and logo that should
+appear instead. Or you can select <b>No logo</b> to not display anything for
+the reseller's customers. <p>
+
+Typically, you should enter a full URL like <tt>http://www.resellerswebsite.com/logo.gif</tt>, but relative URLs for images that are in other Virtualmin modules are also allowed. <p>
+
+<footer>
+
