@@ -2528,12 +2528,16 @@ dresels_egone=One of the selected resellers does not exist
 resel_title1=Create Reseller
 resel_title2=Edit Reseller
 resel_header=Reseller account details
+resel_header2=Reseller's limits
+resel_header3=Allowed features and domains
+resel_header4=IP address allocation
+resel_header5=Logo and other settings
 resel_name=Reseller username
 resel_pass=Password for username
 resel_lock=Account is temporarily locked?
 resel_desc=Real name or description
 resel_email=Contact email address
-resel_subdom=Force virtual servers to be under domain
+resel_subdom=Force virtual servers to be under domain?
 resel_esubdom=Missing or invalid forced domain
 resel_anydom=Allow any domain
 resel_max_doms=Maximum virtual servers
@@ -2568,6 +2572,15 @@ resel_eemail=Invalid contact email address
 resel_defip=IP address for name-based servers
 resel_edefip=Missing or invalid IP address
 resel_edefip2=IP address is not yet active on this system
+resel_logo=Reseller's company logo
+resel_logodef=Global default
+resel_logonone=None
+resel_logourl=From URL
+resel_link=Link for reseller's logo
+resel_linknone=None
+resel_linkurl=To URL
+resel_elogo=Missing or invalid-looking company logo URL
+resel_elink=Missing or invalid-looking logo link URL
 
 licence_err=A problem was detected with your Virtualmin licence :
 licence_recheck=Re-check Licence Status
